--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -70,6 +70,7 @@
               <button id="my-access" class="filter">My Access</button>
               <button id="all-access" class="filter">All</button>
               <button id="friends-access" class="filter">Friends' Access</button>
+              <button id="offline-filter" class="filter">Offline</button>
             </section>
           </section>
           <section id="contact-header" ng-show="rosterNudge">
@@ -87,8 +88,10 @@
                 tabindex="{{ $index + 10 }}">
               {{contact.name}}
               <img class="contact-image" ng-src='{{contact.imageData}}'>
-              <span class="contact-icons">
-                <img ng-show='{{contact.canUProxy}}' src='icons/uproxy-19.png'>
+              <span class="c-icons">
+                <span class="c-icon" ng-show='{{contact.onGoogle}}'> G+ </span>
+                <span class="c-icon" ng-show='{{contact.onFB}}'> FB </span>
+                <img class="c-icon" ng-show='{{contact.canUProxy}}' src='icons/uproxy-19.png'>
               </span>
             </li>
           </ul>
