tweaking various tests, and making proxying work

--- a/chrome/app/scraps/launch.html
+++ b/chrome/app/scraps/launch.html
@@ -29,7 +29,18 @@
 
   <script type="text/javascript" src="../common/backend/util.js"></script>
   <script type="text/javascript" src="../common/backend/server/server.js"></script>
-  <script type="text/javascript" src="../common/backend/server/webclient.js"></script>
+  <script type="text/javascript" src="../common/backend/server/netclient.js"></script>
+
+<!--
+
+ "sctp-peerconnection_test": {
+      "url": "common/backend/test/sctp-peerconnection_test.json"
+    }
+
+var sctp_test = freedom['sctp-peerconnection_test']();
+
+
+-->
 
 <!--
   <script type="text/javascript" src="../common/backend/util.js"></script>
