--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -31,14 +31,25 @@
     </section>
 
     <section ng-show="connectedToApp">
-      <section id="login-splash" ng-hide="loggedIn()">
+      <section id="login-splash" ng-show="splashPage">
         <div class='uproxy-banner'>
         <img src='icons/uproxy-128.png'>proxy
         </div>
-        <p class="description">
-        Safe Passage for the Web.<br>
-        To begin, please connect to one of your social networks.
+        <span class="description">Safe Passage for the Web.</span>
+
+        <input type="text" ng-model="model.me.description"
+            id="my-description"
+            placeholder="Device description"
+            ng-blur="updateDescription();descriptionHelp=false"
+            ng-focus="descriptionHelp=true">
+        </input>
+        <p class="tip" ng-show="descriptionHelp">
+          Please describe your device.
+          This description will be visible to your friends.
         </p>
+
+        <div id="networks-box">
+        <h3>Networks</h3>
 
         <div class="network-btn">
         <button class="btn" ng-show="!isOnline('google')"
@@ -53,9 +64,10 @@
         <button class="btn" ng-show="isOnline('facebook')"
               ng-click="logout('facebook')">Logout FB</button>
         </div>
+        </div>
       </section>
 
-      <div ng-show="loggedIn()">
+      <div ng-hide="splashPage">
         <section id="header">
           <section id="search-section" ng-hide="rosterNudge">
             <input type="text" id="search-contacts" placeholder="search contacts"
@@ -67,8 +79,8 @@
             <button type="search" id="search-btn"></button>
 
             <section id="filters">
-              <button id="my-access" class="filter">My Access</button>
               <button id="all-access" class="filter">All</button>
+              <button id="my-access" class="filter">My Access</button>
               <button id="friends-access" class="filter">Friends' Access</button>
               <input type="checkbox" id="offline-filter" class="filter" ng-model="filters.offline">
                 Offline
@@ -163,7 +175,7 @@
         <span ng-show="model.identityStatus.google.status == 'online'"> G+ </span>
         <span ng-show="model.identityStatus.google.status == 'connecting'"> Connecting to G+ </span>
         <span ng-hide="loggedIn()">Not Connected</span>
-        <a id="options-btn" href="options.html" target="_blank" title="{{'options'|i18n}}"></a>
+        <button id="options-btn" ng-click="toggleOptions()" title="{{'options'|i18n}}"></button>
       </section>
       <!--
       <h4>Status</h4>
