fixes to make it work again

--- a/chrome/app/scraps/launch.html
+++ b/chrome/app/scraps/launch.html
@@ -42,10 +42,12 @@ var sctp_test = freedom['sctp-peerconnection_test']();
 
 -->
 
-<!--
+  <script type="text/javascript"
+    src="../common/backend/nouns-and-adjectives.js"></script>
   <script type="text/javascript" src="../common/backend/util.js"></script>
   <script type="text/javascript" src="../common/backend/uproxy.js"></script>
--->
+  <script type="text/javascript"
+    src="../common/backend/test/uproxy_local_test_proxying.js"></script>
 
   <!--
     <script type="text/javascript" src="tcp-server2.js"></script>
