stabilized consent and instances

--- a/common/ui/options.html
+++ b/common/ui/options.html
@@ -43,7 +43,7 @@
     <h4>Instances</h4>
     <div id="contacts-frame">
       <ul class="contacts">
-        <li ng-repeat="instance in model.instances">
+        <li ng-repeat='instance in model.instances'>
           <h4>{{ model.roster[instance.userId].name }}</h4>
           <p>{{ instance.clientId }}<p>
           <p class="instance-description">
