--- a/chrome/app/scraps/launch.html
+++ b/chrome/app/scraps/launch.html
@@ -45,6 +45,7 @@ var sctp_test = freedom['sctp-peerconnection_test']();
   <script type="text/javascript"
     src="../common/backend/nouns-and-adjectives.js"></script>
   <script type="text/javascript" src="../common/backend/util.js"></script>
+  <script type="text/javascript" src="../common/freedom/freedom.js"></script>
   <script type="text/javascript" src="../common/backend/uproxy.js"></script>
   <script type="text/javascript"
     src="../common/backend/test/uproxy_local_test_proxying.js"></script>
