--- a/common/ui/options.html
+++ b/common/ui/options.html
@@ -67,10 +67,14 @@
                 </button>
                 <span>Pending...</span>
               </div>
-              <button class="btn" ng-switch-when="offered"
-                  ng-click="acceptAccess(instance)">
-                Accept Access
-              </button>
+              <div ng-switch-when="offered">
+                <button class="btn" ng-click="acceptOffer(instance)">
+                  Accept Access
+                </button>
+                <button class="btn" ng-click="declineOffer(instance)">
+                  No Thanks
+                </button>
+              </div>
               <button class="btn" ng-switch-default
                   ng-click="requestAccess(instance)">
                 Request
