improve instance stanzas in options page

--- a/common/ui/options.html
+++ b/common/ui/options.html
@@ -44,17 +44,13 @@
     <div id="contacts-frame">
       <ul class="contacts">
         <li ng-repeat='instance in model.instances'>
-          <h4>{{ model.roster[instance.userId].name }}</h4>
-          <p>{{ instance.clientId }}<p>
-          <p class="instance-description">
-            {{ instance.description }}
+          <h4>{{ instance.rosterInfo.name }}</h4>
+          <p>{{ model.instanceToClient[instance.instanceId] }}
+          <br>{{ instance.description }}
+          <br>{{ instance.instanceId }}
           </p>
-          <div class="client-details">
-            Instance ID: {{ instance.instanceId }}
-            <p>Key Hash: {{ instance.keyHash }}</p>
-          </div>
           <div class="trust">
-            Trust as Proxy: {{ instance.trust.asProxy }}
+            Proxy: {{ instance.trust.asProxy }}
             <div class="box-for-proxy"
                 ng-switch="instance.trust.asProxy">
               <button class="btn" ng-switch-when="yes"
@@ -82,7 +78,7 @@
             </div>
 
             <br>
-            Trust as Client: {{ instance.trust.asClient }}
+            Client: {{ instance.trust.asClient }}
             <div class="box-for-client"
                 ng-switch="instance.trust.asClient">
               <button class="btn" ng-switch-when="no"
