improve button margins

--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -139,11 +139,8 @@
 
             <div ng-show="currentInstance">
               <div class="instance-actions">
-                <img src="icons/uproxy-128.png"
-                    ng-mouseenter="instanceHovered=true"
-                    ng-mouseout="instanceHovered=false">
-                <br>
-                <div class="instance-id" ng-show="instanceHovered">
+                <img src="icons/uproxy-128.png">
+                <div class="instance-id">
                   {{currentInstance.instanceId}}
                 </div>
 
