expose instance desciption in popup

--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -140,6 +140,9 @@
             <div ng-show="currentInstance">
               <div class="instance-actions">
                 <img src="icons/uproxy-128.png">
+                <p>
+                  {{currentInstance.description}}
+                </p>
                 <div class="instance-id">
                   {{currentInstance.instanceId}}
                 </div>
